styles/globals.css
/* ... */
.article--colorful-bg .text {
  color: white;
}
/*/ ////*/

/*/ /////////////  Education level LIST    //////////*/

.novicesModal .closeButton {
  position: absolute;
  margin: 0;
  padding: 0;
  min-width: auto;
  color: black;
  font-size: 19px;
  top: 17px;
  right: 11px;
}

.novicesModal .form {
  gap: 0.3rem;
  margin: 0.5rem 0;
}

.novicesModal .description {
  line-height: 1.25;
  padding: 0.6rem 0;
}

.novicesModal .submit {
  width: 100%;
  background: #f2bb00;
  font-size: 23px;
  color: #004389;
  font-weight: bold;
}

.novicesModal .image {
  background: #f2bb00;
  padding: 0.6rem;
  padding-bottom: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 0.5rem;
}

.novicesModal .image-legend {
  margin-top: 2rem;
  text-transform: uppercase;
  color: #004389;
  font-weight: bold;
  font-size: 14px;
  margin-bottom: 1rem;
}

/*/ ////*/

/*/ /////////////  Education level LIST    //////////*/
.education-level-list {
  display: grid;
  justify-content: center;
  grid: auto/repeat(auto-fit, minmax(200px, 595px));
  gap: 5px;
  max-width: 1200px;
  margin: auto;
  margin-bottom: calc(3.5vw + 1rem);
}

.education-level-item {
  display: flex;
}

.education-level-item a {
  display: flex;
  flex-direction: column;
}

.education-level-item .image {
  height: 100%;
  display: flex;
}

.education-level-item .title-container {
  background: #1e4085;
  padding: 15px 25px;
}

.education-level-item .title {
  font-size: calc(0.5vw + 1.5rem);
  text-transform: none;
  color: #fdc723;
  font-weight: bold;
  margin-bottom: 15px;
}

.education-level-item .subtitle {
  color: white;
  font-size: 22px;
  font-weight: bold;
  display: flex;
  justify-content: space-between;
}

.education-level-item .more-btn {
  font-size: 15px;
  text-transform: none;
  color: #fdc723;
  text-decoration: underline;
}
/*/ ////*/

/*//////////////   NAV    //////////*/
.topbar {
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  padding: 10px;
  background: #ffd24a;
  height: 70px;
}

.topbar-nav {
  display: flex;
  gap: 20px;
  max-width: 1200px;
  width: 100%;
  justify-content: flex-end;
  padding-right: 70px;
  color: #002f90;
  margin: 0 auto 2px auto;
}

.student-guide {
  border-right: 1px solid #002f90;
  padding-right: 20px;
}

.navbar {
  height: 110px;
  display: flex;
  flex-wrap: wrap;
}

.navbar .logo {
  min-width: 140px;
}

.navbar-item {
  position: relative;
  text-align: center;
}

.navbar-item--dropdown .navbar-sub-menu {
  display: none;
  padding: 0;
  position: absolute;
  left: -1px;
  font-size: 16px;
  font-weight: normal;
}

.navbar-item--dropdown:hover .navbar-sub-menu {
  display: block;
  z-index: 2;
  background: white;
  padding: 10px 10px;
  left: -11px;
}

.navbar-item--dropdown:first-child:hover .navbar-sub-menu {
  /* left: -29px; */
  left: -15px;
  padding: 1rem;
  width: 90px;
}

.navbar-item--dropdown .navbar-sub-menu li:hover {
  text-decoration: underline;
}

.navbar-wrapper {
  display: flex;
  justify-content: space-between;
  max-width: 1200px;
  margin: auto;
  width: 100%;
  height: 100%;
  align-items: center;
}

.navbar-end {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: 20px;
  height: 100%;
  flex-wrap: wrap;
}

.navbar-menu {
  display: flex;
  list-style: none;
  color: #002f90;
  font-size: 17px;
  gap: 35px;
  font-weight: bold;
}

.navbar-schedule-button {
  align-self: flex-start;
}

.schedule-button {
  color: white;
  background: #003a7a;
  clip-path: polygon(13% 100%, 0 0, 100% 0, 100% 100%, 60% 100%);
  border-radius: 0 0 0.6rem 2.5rem;
  padding: 0.6rem 2.8rem 0.6rem 3.8rem;
  font-size: 14px;
  height: 44px;
  display: flex;
  justify-content: center;
  align-items: center;
  align-self: flex-start;
}

.navbar-mobile {
  display: none;
}

.footer-address-mobile {
  display: none;
}

@media (max-width: 670px) {
  .navbar .logo {
  }

  .navbar-wrapper {
    flex-direction: column;
    height: 90px;
  }

  .navbar-wrapper .logo {
    display: none;
  }

  .navbar-mobile .logo {
    display: block;
  }

  .navbar-schedule-button {
  }

  .navbar-menu {
    gap: 2%;
  }

  .navbar-end {
    order: 1;
  }

  .navbar-end .navbar-schedule-button {
    display: none;
    justify-content: center;
  }

  .navbar-mobile {
    display: flex;
  }

  .footer {
    flex-direction: column;
  }

  .footer-address {
    display: none;
  }

  .footer-address-mobile {
    display: block;
    margin-top: 2rem;
  }
}
/*/ ////*/

/*/ /////////////////////////     AGENDE SUA VISITA    ////////////////////////*/
.agende-sua-visita .text-content {
  text-align: left;
  max-width: 344px;
}

.agende-sua-visita .title {
  font-size: 35px;
}

.agende-sua-visita .form {
  max-width: 600px;
  display: flex;
  flex-direction: column;
  gap: 20px;
  padding: 10px;
}

.agende-sua-visita .input {
  background: #d7d785;
  border-radius: 5px;
  border: none;
  height: 25px;
  width: 100%;
}

.agende-sua-visita.submit-schedule-button {
  background: yellow;
  border-radius: 6px;
  border: 0;
}
/*/////*/

/*/////*/
/*/ /////////////////////////       PROJETOS          ////////////////////////*/
.projects {
  margin-bottom: calc(3.5vw + 1rem);
}

.projects .project-list {
  display: grid;
  justify-content: center;
  grid: auto/repeat(auto-fit, minmax(min-content, 395px));
  gap: 5px;
  max-width: 1200px;
  margin: auto;
}

.projects-page .title-subtitle, .projects .title-subtitle {
  display: flex;
  gap: 70px;
  align-items: center;
  margin-bottom: 30px;
  flex-wrap: wrap;
  justify-content: center;
  text-align: center;
}

.projects .project-item {
  display: flex;
  border: 2px solid black;
}

/*/////*/

/*/ /////////////////////////       REMATRÍCULA          ////////////////////////*/
.reregistration .reregistration-section {
  max-width: 1200px;
  margin: auto;
  margin-bottom: 1rem;
  padding: 0 2%;
}

.reregistration .reregistration-section {
  margin-bottom: calc(3.5vw + 1rem);
}
/* ... */

